# Saphillon-Core

./: Cargo.toml  Makefile  buf.gen.yaml
.devcontainer/: Dockerfile
.github/workflows/: testing.yml
src/: core.rs  lib.rs  plugin.rs  proto.rs  runtime.rs  workflow.rs
src/proto/: sapphillon.v1.rs
