[package]
name = "sapphillon_core"
version = "0.4.0"
edition = "2024"
authors = ["Yuta Takahashi <y.highbridge04@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
description = "Core library for Sapphillon, a Rust-based Workflow runtime."
repository = "https://github.com/Walkmana-25/Sapphillon-Core"
homepage = "https://github.com/Walkmana-25/Sapphillon-Core"


[dependencies]
anyhow = { version = "1.0", default-features = false }
tokio = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
tonic = { version = "0.12.0", default-features = false }
prost = { version = "0.13.1", default-features = false }
prost-types = { version = "0.13.1", default-features = false }
deno_core = { version = "0.355.0", default-features = false }
deno_runtime = "0.220.0"
deno_permissions = "0.71.0"
deno_error = "0.7.0"


[build-dependencies]
tonic-build = { version = "0.12.0", default-features = false }
